# Chatguard

./: Cargo.toml  Dockerfile  README.md  TODO.md  diesel.toml  docker-compose.yml
migrations/2025-03-08-191650_allmodels/: down.sql  up.sql
src/: args.rs  bot.rs  config.rs  error.rs  main.rs  metrics.rs  models.rs  schema.rs  state.rs  util.rs
src/commands/: afk.rs  getavatar.rs  google.rs  help.rs  issinfo.rs  mod.rs  ping.rs  serverinfo.rs  uptime.rs  userinfo.rs  vote.rs
src/commands/listofcmds/: game.md
src/db/: mod.rs  schema.rs  settings.rs
src/events/: commands.rs  main.rs  mod.rs
src/ops/: afk.rs  autorole.rs  commands.rs  mod.rs  prefix.rs  rank.rs  rankconfigs.rs  ticketconfigs.rs  tickets.rs  uptime.rs
src/tasks/: dbl.rs
