[package]
name = "chatguard"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = "0.5"
tokio = { version = "1.28.0", features = ["macros", "rt-multi-thread", "signal"]}
tracing-subscriber = "0.3"
tracing = "0.1"
reqwest = "0.11"
serde_json = "1"
dotenv = "0.15.0"
urlencoding = "2.1.3"
serde = "1.0.218"
diesel = { version = "2.2.0", features = ["postgres"] }

[dependencies.serenity]
default-features = false
features = ["client", "http", "gateway", "model", "rustls_backend"]
version = "0.12"
