[package]
name = "chatguard"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28.0", features = ["macros", "rt-multi-thread", "signal"]}
tracing-subscriber = "0.3"
tracing = "0.1"
reqwest = "0.11"
serde_json = "1"
dotenv = "0.15.0"
urlencoding = "2.1.3"
serde = "1.0.218"
diesel = { version = "2.2.0", default-features = false, features = ["postgres", "chrono", "r2d2"] }
chrono = "^0"
clap = { version = "3.1.9", features = ["derive"] }
diesel_migrations = "2.2.0"
prometheus = "0.14.0"
dbl-rs = "0.4.0"
toml = "0.8.20"
pico-args = "0.5.0"
hyper = { version = "0.14", features = ["server"] }

# twilight
twilight-gateway = "0.14"
twilight-http = "0.14"
twilight-model= "0.14"
twilight-cache-inmemory = "0.14"
twilight-util = { version = "0.14", features = ["builder"] }
twilight-validate = "0.14"
tokio-stream = "0.1.17"

time = { version = "0.3", features = ["formatting", "macros"] }
kuchiki = "0.8.1"
futures-util = "0.3.31"
